--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -1,5 +1,5 @@
-html {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+html, body {
+    font-family: "JetBrains Mono", monospace;
 }
 
 h1:focus {
@@ -100,4 +100,48 @@ a, .btn-link {
 
 code {
     color: #c02d76;
+}
+
+#fight {
+    margin: 10px 10px 20px 10px;
+}
+
+#fight h3 {
+    margin-bottom: 10px;
+}
+
+.players-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.player {
+    width: 42%;
+    padding: 10px;
+    border: 2px solid #f00;
+}
+
+#console {
+    width: 100%;
+    margin: 10px;
+}
+
+.console {
+    background-color: #000;
+    color: #ddd;
+    padding: 10px;
+    height: 170px;
+    width: 540px;
+    overflow-y: auto;
+    font-family: "JetBrains Mono", monospace;
+    font-size: 0.8rem;
+    border: 1px solid #555;
+}
+
+.log-entry {
+    white-space: pre-wrap;
+}
+
+.btn-danger {
+    margin: 5px;
 }
