--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -1,5 +1,13 @@
 html, body {
     font-family: "JetBrains Mono", monospace;
+    background: #000512;
+    color: #ddd;
+}
+
+h1 {
+    font-size: 8rem;
+    color: #f00;
+    align-content: center;
 }
 
 h1:focus {
@@ -102,7 +110,7 @@ code {
     color: #c02d76;
 }
 
-#fight {
+#fight, #hero-setup {
     margin: 10px 10px 20px 10px;
 }
 
@@ -115,7 +123,7 @@ code {
     justify-content: space-between;
 }
 
-.player {
+.player, .opponent {
     width: 42%;
     padding: 10px;
     border: 2px solid #f00;
