--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -10,12 +10,10 @@
 >
     @for (int row = 0; row < GridSize; row++)
     {
-        <div class="row">
-            @for (int col = 0; col < GridSize; col++)
-            {
-                <div class="cell @(row == player.Y && col == player.X ? "player" : "")"></div>
-            }
-        </div>
+        @for (int col = 0; col < GridSize; col++)
+        {
+            <div class="cell @(row == player.Y && col == player.X ? $"sprite {player.FacingDirection}" : "")"></div>
+        }
     }
 </div>
 
