--- a/Pages/Home.razor.css
+++ b/Pages/Home.razor.css
@@ -1,42 +1,46 @@
-﻿.grid-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2px;
-}
-
-.grid-row {
-    display: flex;
-    gap: 2px;
-}
-
-.grid-cell {
-    width: 20px;
-    height: 20px;
-    background-color: lightgray;
-    border: 1px solid black;
-}
-
-.grid {
+﻿.grid {
     display: grid;
-    grid-template-rows: repeat(10, 50px);
-    grid-template-columns: repeat(10, 50px);
+    grid-template-rows: repeat(10, 64px);
+    grid-template-columns: repeat(10, 64px);
     gap: 2px;
-    outline: none; /* Supprimer le contour sur focus */
-}
-
-.row {
-    display: contents;
+    outline: 2px solid black; /* Supprimer le contour sur focus */
 }
 
 .cell {
-    width: 50px;
-    height: 50px;
+    width: 64px;
+    height: 64px;
     background-color: lightgray;
     border: 1px solid #ddd;
 }
 
-.cell.player {
-    background-color: blue;
-    border-radius: 50%;
+.player {
+    background: none;
+}
+
+@keyframes spriteAnimation {
+    from {
+        background-position: 0px;
+    }
+
+    to {
+        background-position: -384px;
+    }
+    /* 64px * 6 frames */
+}
+
+.sprite {
+    width: 64px; /* largeur d'une frame */
+    height: 64px; /* hauteur d'une frame */
+    background-image: url('/images/Run-Sheet.png');
+    background-repeat: no-repeat;
+    animation: spriteAnimation 1s steps(6) infinite;
+    transform-origin: center center;
+}
+
+.Right {
+    transform: scaleX(1);
+}
+
+.Left {
+    transform: scaleX(-1);
 }
