Finalisation LifeFountain basique
Gestion des positions des monstres et fontaines dans les classes
Génération des fontaines et des monstres à l'initialisation
Ajout d'un sprite pour les fontaines

--- a/Pages/Home.razor.css
+++ b/Pages/Home.razor.css
@@ -71,3 +71,15 @@
 #title {
     text-align: center;
 }
+
+.monster {
+    background-color: red;
+}
+
+.fountain {
+    background-color: lightblue;
+    background-image: url('/images/fountain.gif');
+    background-repeat: no-repeat;
+    background-size: 50px;
+    background-position: center;
+}
