--- a/Pages/Home.razor.css
+++ b/Pages/Home.razor.css
@@ -123,7 +123,7 @@ body {
     to {
         background-position: -384px;
     }
-    /* 64px * 6 frames */
+    /* 64px x 6 frames */
 }
 
 .sprite {
@@ -143,10 +143,16 @@ body {
     transform: scaleX(-1);
 }
 
-#title {
+#center-panel-map {
     text-align: center;
     width: 100%;
     margin: 0 0 10px;
+}
+
+#center-panel-characterstats {
+    text-align: center;
+    width: 100%;
+    margin: 10px;
 }
 
 .monster {
@@ -162,12 +168,12 @@ body {
 }
 
 #fight, #hero-setup, #hero-stats, #hero-inventory {
-    margin: 10px 0;
+    margin: 10px;
     padding: 10px;
 }
 
-#fight h3 {
-    margin-bottom: 10px;
+#hero-setup h4, #hero-stats h4, #hero-inventory h4, #fight h4 {
+    margin: 10px 0 10px;
 }
 
 .players-container {
